# trend-lab-tabloid-tabs-to-paper-260605

./: README.md  pyproject.toml
src/tabloid/: main.py
tests/: test_smoke.py
