[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "tabloid-tabs-to-paper"
version = "0.1.0"
description = "Turn tabs and links into a personal newspaper document."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Tabloid Contributors" }]
dependencies = [
  "beautifulsoup4>=4.12.0",
  "requests>=2.31.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
tabloid = "tabloid.main:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
